--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
 *{
     padding: 0%;
     margin: 0%;
-}
-.body{
-    position:relative;
-}
-.background{
-    object-fit: contain;
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    z-index: -20;
 
+}
+.background-video{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+video {
+    position:fixed;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    /* z-index: -1; */
 }
 .menu-bar{
     position: absolute;
